--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Setup packages
         run: |
           sudo apt-get -yqq install postgresql-client libpq-dev gifsicle jpegoptim optipng jhead
+          wget -qO- https://raw.githubusercontent.com/discourse/discourse_docker/master/image/base/install-pngquant | sudo sh
 
       - name: Setup redis
         uses: shogo82148/actions-setup-redis@v1
