--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,9 +47,9 @@ jobs:
           fetch-depth: 1
 
       - name: Setup packages
-        run:
-          - sudo apt-get -yqq install postgresql-client libpq-dev gifsicle jpegoptim optipng jhead &&\
-          - wget -qO- https://raw.githubusercontent.com/discourse/discourse_docker/master/image/base/install-pngquant | sudo sh
+        run: |
+          sudo apt-get -yqq install postgresql-client libpq-dev gifsicle jpegoptim optipng jhead && \
+          wget -qO- https://raw.githubusercontent.com/discourse/discourse_docker/master/image/base/install-pngquant | sudo sh
 
       - name: Setup redis
         uses: shogo82148/actions-setup-redis@v1
@@ -100,16 +100,23 @@ jobs:
         if: env.BUILD_TYPE == 'LINT'
         run: bundle exec rubocop .
         
-      - name: RSpec
+      - name: Core RSpec
         if: env.BUILD_TYPE == 'BACKEND'
-        run:
-          - bundle exec rspec
-          - bundle exec rake plugin:spec
+        run: bundle exec rspec
 
-      - name: QUnit
+      - name: Plugin RSpec
+        if: env.BUILD_TYPE == 'BACKEND'
+        run: bin/rake plugin:spec
+
+      - name: Core QUnit
         if: env.BUILD_TYPE == 'FRONTEND'
-        run:
-          - bundle exec rake qunit:test['1200000'] && \
-          - bundle exec rake qunit:test['1200000','/wizard/qunit'] && \
-          - bundle exec rake plugin:qunit
+        run: bundle exec rake qunit:test['1200000']
+      
+      - name: Wizard QUnit
+        if: env.BUILD_TYPE == 'FRONTEND'
+        run: bundle exec rake qunit:test['1200000','/wizard/qunit']
+          
+      - name: Plugin QUnit
+        if: env.BUILD_TYPE == 'FRONTEND'
+        run: bundle exec rake plugin:qunit
         
