--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,12 +48,14 @@ jobs:
           fetch-depth: 1
 
       - name: Setup packages
+        if: env.BUILD_TYPE != 'LINT'
         run: |
           sudo apt-get -yqq install postgresql-client libpq-dev gifsicle jpegoptim optipng jhead && \
           wget -qO- https://raw.githubusercontent.com/discourse/discourse_docker/master/image/base/install-pngquant | sudo sh
 
       - name: Setup redis
         uses: shogo82148/actions-setup-redis@v1
+        if: env.BUILD_TYPE != 'LINT'
         with:
           redis-version: ${{ matrix.redis }}
 
@@ -94,7 +96,8 @@ jobs:
       - name: Yarn install
         run: yarn install --dev
 
-      - name: Create database          
+      - name: Create database
+        if: env.BUILD_TYPE != 'LINT'    
         run: bin/rake db:create db:migrate
 
       - name: Rubocop
