Try migrating twice
I hope this doesn't fix the problem...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Create database
         if: env.BUILD_TYPE != 'LINT'    
-        run: bin/rake db:create db:migrate
+        run: bin/rake db:create db:migrate && bin/rake db:migrate
 
       - name: Rubocop
         if: env.BUILD_TYPE == 'LINT'
