--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Rubocop Linter
         uses: andrewmcodes/rubocop-linter-action@v2.0.0
         with:
+          version: "0.69.0"
           additional_gems: 'rubocop-discourse'
           fail_level: 'refactor'
           bundle: false
