--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: '2.6.3'
           architecture: 'x64'  
       - name: Install gems
         run: gem install rubocop:0.69.0 rubocop-discourse 
